--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,3 @@
-// Option A: Include all of Bootstrap
-
 // Include any default variable overrides here (though functions won't be available)
 $primary: #5265e1;
 $secondary: #fa5959;
@@ -36,7 +34,7 @@ $secondary: #fa5959;
     }
   }
 }
-
+//Custom styles for the cards section
 #card-image1,
 #card-image2 {
   height: auto;
