--- a/src/main.scss
+++ b/src/main.scss
@@ -62,21 +62,21 @@ body {
   width: 40%;
 }
 
-#card-container {
-  display: flex;
-  padding-bottom: 3rem;
-  padding-top: 3rem;
-}
+// #card-container {
+//   display: flex;
+//   padding-bottom: 3rem;
+//   padding-top: 3rem;
+// }
 
-#card1 {
-  position: relative;
-  margin-top: -3rem;
-}
+// #card1 {
+//   position: relative;
+//   margin-top: -3rem;
+// }
 
-#card3 {
-  position: relative;
-  margin-top: 3rem;
-}
+// #card3 {
+//   position: relative;
+//   margin-top: 3rem;
+// }
 
 // @media (max-width: 567px) {
 //   #card2 {
