--- a/src/main.scss
+++ b/src/main.scss
@@ -26,7 +26,8 @@ body {
 
 #nav-bar-features:hover,
 #nav-bar-pricing:hover,
-#nav-bar-contact:hover {
+#nav-bar-contact:hover,
+#footer-nav-link:hover {
   background-color: none !important;
   color: #fa5959 !important;
 }
